# xdg-desktop-portal-luminous

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  _typos.toml  flake.nix  meson.build  shell.nix
.github/workflows/: ci.yaml  rust.yml  typos.yml
archlinux/: PKGBUILD
contrib/PKGBUILD/: PKGBUILD
libs/accessdialog/: Cargo.toml  build.rs
libs/accessdialog/src/: lib.rs
libs/accessdialog/ui/: dialog.slint
libs/screenshotdialog/: Cargo.toml  build.rs
libs/screenshotdialog/src/: lib.rs
libs/screenshotdialog/ui/: selectwindow.slint
lumious_headless_helper/: Cargo.toml
lumious_headless_helper/src/: main.rs
misc/: luminous.portal  org.freedesktop.impl.portal.desktop.luminous.service.in  org.freedesktop.impl.portal.desktop.wlrrust.service.in  waycratewlr.portal  xdg-desktop-portal-luminous.service.in  xdg-desktop-portal-wlrrust.service.in
src/: access.rs  backend.rs  background.rs  clipboard.rs  dialog.rs  gui.rs  input_capture.rs  main.rs  pipewirethread.rs  remote.rs  remotedesktop.rs  request.rs  screencast.rs  screenshot.rs  session.rs  settings.rs  slintbackend.rs  systemd.rs  utils.rs
src/clipboard/: wayland_backend.rs
src/remote/: remote_thread.rs  state.rs
src/remotedesktop/: dispatch.rs  eis_server.rs  remote_thread.rs  state.rs
src/settings/: config.rs
stream_message/: Cargo.toml
stream_message/src/: error.rs  lib.rs
tools/shanatest/: Cargo.toml
tools/shanatest/src/: main.rs
ui/: selectwindow.slint
