[workspace.package]
version = "0.1.13-beta1"
edition = "2024"
license = "MIT"
repository = "https://github.com/waycrate/xdg-desktop-portal-luminous"
keywords = ["wayland"]

[package]
name = "xdg-desktop-portal-luminous"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["wayland"]

[dependencies]
zbus = { version = "5.12", default-features = false, features = [
	"tokio",
	"url",
] }
tokio = { version = "1.48.0", features = ["full"] }
iced = { features = [
	"tokio",
	"debug",
	"image",
	"advanced",
	"svg",
	"markdown",
], version = "0.14.0" }
iced_runtime = "0.14.0"
iced_futures = "0.14.0"
serde = { version = "1.0.228", features = ["derive"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
url = { version = "2.5", features = ["serde"] }
serde_repr = "0.1"
image = { version = "=0.24", default-features = false, features = [
	"jpeg",
	"png",
	"pnm",
	"qoi",
] }

bitflags = "2.10.0"
enumflags2 = "0.7.12"
anyhow = "1.0.100"

# pipewire
pipewire = "0.8.0"
libspa-sys = "0.8.0"

libwayshot = "0.4.0"
rustix = { version = "1.1.2", features = ["fs", "use-libc"] }

# REMOTE
wayland-protocols = { version = "0.32.9", default-features = false, features = [
	"unstable",
	"client",
] }

wayland-protocols-wlr = { version = "0.3.9", default-features = false, features = [
	"client",
] }
wayland-client = { version = "0.31.11" }

wayland-protocols-misc = { version = "0.3.9", features = ["client"] }
xkbcommon = "0.9.0"
tempfile = "3.23.0"
thiserror = "2.0.17"
toml = "0.9.8"
csscolorparser = "0.8.1"
notify = "8.2.0"
futures = "0.3.31"
libwaysip = "0.5.0"

calloop = "0.14.3"
calloop-wayland-source = "0.4.1"
iced_layershell = "0.14.0-beta3"
