[workspace]
resolver = "3"
members = [".", "./stream_message", "./lumious_headless_helper"]

[workspace.package]
version = "0.1.18"
edition = "2024"
license = "MIT"
repository = "https://github.com/waycrate/xdg-desktop-portal-luminous"
keywords = ["wayland"]

[package]
name = "xdg-desktop-portal-luminous"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["wayland"]

[workspace.dependencies]
serde = "1.0.228"
serde_json = "1.0.149"
thiserror = "2.0.18"
stream_message = { path = "./stream_message", version = "0.1.18" }

[dependencies]
zbus = { version = "5.14", default-features = false, features = [
	"tokio",
	"url",
] }
stream_message.workspace = true

tokio = { version = "1.50.0", features = ["full"] }
iced = { features = [
	"tokio",
	"debug",
	"image",
	"advanced",
	"svg",
	"markdown",
], version = "0.14.0" }
iced_runtime = "0.14.0"
iced_futures = "0.14.0"
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true

tracing = "0.1.44"
tracing-subscriber = "0.3.22"
url = { version = "2.5", features = ["serde"] }
serde_repr = "0.1"
image = { version = "=0.24", default-features = false, features = [
	"jpeg",
	"png",
	"pnm",
	"qoi",
] }

bitflags = "2.11.0"
enumflags2 = "0.7.12"
anyhow = "1.0.102"

# pipewire
pipewire = "0.9.2"

libwayshot = "0.7.3"
rustix = { version = "1.1.4", features = ["fs", "use-libc"] }

# REMOTE
wayland-protocols = { version = "0.32.11", default-features = false, features = [
	"unstable",
	"client",
] }

wayland-protocols-wlr = { version = "0.3.11", default-features = false, features = [
	"client",
] }
wayland-client = { version = "0.31.13" }

wayland-protocols-misc = { version = "0.3.11", features = ["client"] }
xkbcommon = "0.9.0"
tempfile = "3.26.0"
thiserror = "2.0.18"
toml = "1.0.6"
csscolorparser = "0.8.3"
notify = "8.2.0"
futures = "0.3.32"
libwaysip = "0.6.0"
reis = { version = "0.6.1", features = ["tokio", "calloop"] }

calloop = "0.14.4"
calloop-wayland-source = "0.4.1"
iced_layershell = "0.16.0"
