[package]
name = "screenshotdialog"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint.workspace = true

[build-dependencies]
slint-build.workspace = true
